# ros-abm-interaction

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  TODO.md  package.xml  setup.py
abm_grant_interaction/: __init__.py  abm_interaction.py  interaction.py  interaction_builder.py  plan_builder.py
abm_grant_interaction/bkt/: bkt.py
abm_grant_interaction/data_structures/: __init__.py  parameter_database.py  params.py  state.py  state_database.py
abm_grant_interaction/goal_setter/: goal_calculator.py  goal_functions.py  session_planner.py  setter.py
abm_grant_interaction/interactions/: __init__.py  am_checkin.py  common.py  first_interaction.py  first_meeting.py  off_checkin.py  options.py  pm_checkin.py
abm_grant_interaction/plan_builder/: builder.py
abm_grant_interaction/testing_utils/: simulate_messages.py
config/: config.yaml
examples/: am_interaction.py  first_meeting.py  off_checkin.py  pm_checkin.py  set_goals_from_fitbit_data.py
launch/: abm_interaction.launch  qt_abm_interaction.launch  setup_abm_interaction.launch  setup_aws_and_fitbit.launch
resources/: big_5_questions.csv  variation.csv
scripts/: abm_cordial_client.py  record_topics.sh  ros_abm_fitbit_client.py  setup_abm_interaction.py  setup_aws_and_fitbit.py  setup_fitbit_and_aws.py
src/abm-grant-interaction/: LICENSE  setup.py
src/abm_fitbit_client/: __init__.py
srv/: ActiveStepsOnDate.srv
tests/: test_bkt.py  test_goal_calculator.py  test_interaction_builder.py  test_interaction_scheduler.py  test_plan_builder.py  test_session_planner.py
(+22 files in other folders)
