<?xml version="1.0"?>
<package format="2">

  <name>abm_interaction</name>
  <version>0.0.0</version>
  <description>The abm_interaction package</description>
  <maintainer email="audrow.nash@gmail.com">Audrow Nash</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>cordial_gui</depend>
  <exec_depend>rospy</exec_depend>

</package>
